--- a/flexLayout/index.html
+++ b/flexLayout/index.html
@@ -11,17 +11,26 @@
 
 <body>
     <div class="header">
-        <ul class="left-links">
-            <li><a href="google.com">About</a></li>
-            <li><a href="google.com">Store</a></li>
-        </ul>
-        <ul class="right-links">
-            <li><a href="google.com">Profile</a></li>
-            <li><a href="google.com">Settings</a></li>
-        </ul>
+        <div class="justify-left">
+            <ul class="left-links">
+                <li><a href="google.com">About</a></li>
+                <li><a href="google.com">Store</a></li>
+            </ul>
+        </div>
+        <div class="justify-right">
+            <ul class="right-links">
+                <li><a href="google.com">Profile</a></li>
+                <li><a href="google.com">Settings</a></li>
+            </ul>
+        </div>
+
+
     </div>
     <div class="content">
-        <img src="./images/logo.png" alt="">
+        <div class="justify-image">
+            <img src="./images/logo.png" alt="">
+        </div>
+
         <div class="input">
             <input type="text">
         </div>
